raw/AGNESIA TATONTOS FEVOURA 6427 245150207111058/2024-11-14-10-49-02.ceg/compilation.txt
NT.java:43: error: ')' expected
        double hBagi = kali(bil[3], bil]);
                                       ^
1 error
Not compiled
